# braiins-rust-course

lesson-02/: Cargo.toml
lesson-02/src/: main.rs
lesson-05/: Cargo.toml
lesson-05/src/: format.rs  main.rs
lesson-07/: Cargo.toml
lesson-07/src/: input.rs  output.rs
lesson-07/src/format/: func.rs
lesson-09/: Cargo.toml
lesson-09/src/: lib.rs
lesson-1/src/: main.rs
lesson-11/: README.md
lesson-11/client/: README.md
lesson-11/client/src/: main.rs
lesson-11/rust_chat/: Cargo.toml  README.md
lesson-11/server/: Cargo.toml  README.md
lesson-11/server/src/: main.rs
lesson-11/src/: lib.rs
lesson-13/: README.md
lesson-13/client/: Cargo.toml  README.md
lesson-13/client/src/: main.rs
lesson-13/rust_chat/: Cargo.toml  README.md
lesson-13/server/: Cargo.toml
lesson-13/server/src/: main.rs
lesson-15/: README.md
lesson-15/client/: README.md
lesson-15/client/src/: main.rs
lesson-15/rust_chat/: Cargo.toml
lesson-15/rust_chat/src/: lib.rs
lesson-15/server/: README.md
lesson-15/server/src/: main.rs
lesson-16/: README.md
lesson-16/client/: README.md
lesson-16/client/src/: main.rs
lesson-16/rust_chat/: README.md
lesson-16/rust_chat/src/: lib.rs
lesson-16/server/: README.md
lesson-16/server/src/: main.rs
lesson-17/: Cargo.toml
lesson-17/pages/: index.html  users.html
lesson-17/server/: Cargo.toml  README.md
lesson-17/src/: main.rs  message.rs
lesson-18/: Cargo.toml  README.md
lesson-18/pages/: index.html
lesson-18/src/: main.rs  message.rs  ws.rs
lesson-2/: Cargo.toml
lesson-2/src/: main.rs
lesson-5/: Cargo.toml
lesson-5/src/: error.rs  format.rs  main.rs
lesson-7/: Cargo.toml
lesson-7/src/: error.rs  main.rs  parallel.rs
lesson-7/src/format/: mod.rs
lesson-9/: Cargo.toml
lesson-9/src/: lib.rs
