[package]
name = "lesson-18"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
image = "0.25.1"
once_cell = "1.19.0"
rocket = "0.5.1"
rocket_ws = "0.1.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
