[package]
name = "lesson-9"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_cbor = "0.11.2"
serde = { version = "1.0.202", features = ["derive"] }
parking_lot = "0.12.2"
tokio = { version = "1.37.0", features = ["full"] }
async-std = "1.12.0"
chrono = "0.4.38"
image = "0.25.1"
clap = { version = "4.5.4", features = ["derive"] }
